:bug: fix cursor on mobile version

--- a/styles/build.css
+++ b/styles/build.css
@@ -552,5 +552,14 @@ div[class^=card_projects]:hover .perspective {
     width: 19vw;
   }
 }
+@media only screen and (hover: none) and (pointer: coarse) {
+  * {
+    cursor: auto;
+    pointer-events: all;
+  }
+  #mouse, #mouseCircle {
+    display: none;
+  }
+}
 
 /*# sourceMappingURL=build.css.map */
